--- a/src/main/resources/com/sjmulhern/dndTracker/views/CreatureEditorView.fxml
+++ b/src/main/resources/com/sjmulhern/dndTracker/views/CreatureEditorView.fxml
@@ -97,16 +97,17 @@
             <Label text="Weapons:" GridPane.rowIndex="1" />
          <TableView fx:id="abilityTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
            <columns>
-             <TableColumn prefWidth="75.0" text="Name" />
-             <TableColumn prefWidth="401.0" text="Description" />
+             <TableColumn fx:id="abilitiesNameColumn" prefWidth="75.0" text="Name" />
+             <TableColumn fx:id="abilitiesDescriptionColumn" prefWidth="401.0" text="Description" />
            </columns>
          </TableView>
-         <TableView fx:id="weaponsTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <TableView fx:id="weaponsTable" prefHeight="76.0" prefWidth="393.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
            <columns>
-             <TableColumn prefWidth="77.0" text="Name" />
-               <TableColumn prefWidth="73.0" text="To Hit" />
-             <TableColumn prefWidth="99.0" text="Damage" />
-               <TableColumn prefWidth="227.0" text="Description" />
+             <TableColumn fx:id="toolsNameColumn" prefWidth="102.0" text="Name" />
+               <TableColumn fx:id="toolsToHitColumn" prefWidth="48.0" text="To Hit" />
+             <TableColumn fx:id="toolsDamageColumn" prefWidth="55.0" text="Damage" />
+               <TableColumn fx:id="toolsDamageTypeColumn" prefWidth="93.0" text="Damage Type" />
+               <TableColumn fx:id="toolsDescriptionColumn" prefWidth="179.0" text="Description" />
            </columns>
          </TableView>
         </GridPane>
