--- a/src/main/resources/com/sjmulhern/dndTracker/views/CreatureEditorView.fxml
+++ b/src/main/resources/com/sjmulhern/dndTracker/views/CreatureEditorView.fxml
@@ -226,8 +226,8 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" />
          </rowConstraints>
         </GridPane>
-        <Label layoutX="259.0" layoutY="179.0" text="Hit Points (Max):" />
-        <Spinner fx:id="hitPointsField" editable="true" layoutX="355.0" layoutY="174.0" prefHeight="27.0" prefWidth="74.0" stylesheets="@spinner.css" />
+        <Label layoutX="262.0" layoutY="182.0" text="Hit Points (Max):" />
+        <Spinner fx:id="hitPointsField" editable="true" layoutX="358.0" layoutY="177.0" prefHeight="27.0" prefWidth="74.0" stylesheets="@spinner.css" />
       <Button fx:id="saveCreatureButton" layoutX="490.0" layoutY="709.0" mnemonicParsing="false" onAction="#saveCreatureButtonPressed" text="Save Creature" />
       <ComboBox fx:id="creatureNames" layoutX="123.0" layoutY="709.0" prefHeight="27.0" prefWidth="300.0" />
       <Button fx:id="openButton" layoutX="432.0" layoutY="709.0" mnemonicParsing="false" onAction="#openButtonPressed" text="Open" />
@@ -263,5 +263,6 @@
         </GridPane>
       <Label fx:id="levelDescriptor" layoutX="441.0" layoutY="182.0" text="Level:" />
       <Spinner fx:id="levelSpinner" layoutX="481.0" layoutY="177.0" prefHeight="27.0" prefWidth="90.0" stylesheets="@spinner.css" />
+      <ComboBox fx:id="currentConditionCombobox" layoutX="457.0" layoutY="66.0" prefWidth="150.0" />
     </Pane>
 </AnchorPane>
